@@ -1712,18 +1712,7 @@ comment|// ExecutorUtil.shutdownAndAwaitTermination(cc.getCmdDistribExecutor());
 comment|// we need to create all of our lost watches
 comment|// seems we dont need to do this again...
 comment|// Overseer.createClientNodes(zkClient, getNodeName());
-name|cc
-operator|.
-name|cancelCoreRecoveries
-argument_list|()
-expr_stmt|;
-name|registerAllCoresAsDown
-argument_list|(
-name|registerOnReconnect
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
+comment|// start the overseer first as following code may need it's processing
 if|if
 condition|(
 operator|!
@@ -1782,6 +1771,18 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+name|cc
+operator|.
+name|cancelCoreRecoveries
+argument_list|()
+expr_stmt|;
+name|registerAllCoresAsDown
+argument_list|(
+name|registerOnReconnect
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|zkStateReader
 operator|.
 name|createClusterStateWatchersAndUpdate
@@ -3306,85 +3307,12 @@ parameter_list|)
 block|{
 try|try
 block|{
-name|boolean
-name|createdWatchesAndUpdated
-init|=
-literal|false
-decl_stmt|;
-name|Stat
-name|stat
-init|=
-name|zkClient
-operator|.
-name|exists
-argument_list|(
-name|ZkStateReader
-operator|.
-name|LIVE_NODES_ZKNODE
-argument_list|,
-literal|null
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|stat
-operator|!=
-literal|null
-operator|&&
-name|stat
-operator|.
-name|getNumChildren
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
-name|zkStateReader
-operator|.
-name|createClusterStateWatchersAndUpdate
-argument_list|()
-expr_stmt|;
-name|createdWatchesAndUpdated
-operator|=
-literal|true
-expr_stmt|;
-name|publishAndWaitForDownStates
-argument_list|()
-expr_stmt|;
-block|}
 name|createClusterZkNodes
 argument_list|(
 name|zkClient
 argument_list|)
 expr_stmt|;
-name|createEphemeralLiveNode
-argument_list|()
-expr_stmt|;
-name|ShardHandler
-name|shardHandler
-decl_stmt|;
-name|UpdateShardHandler
-name|updateShardHandler
-decl_stmt|;
-name|shardHandler
-operator|=
-name|cc
-operator|.
-name|getShardHandlerFactory
-argument_list|()
-operator|.
-name|getShardHandler
-argument_list|()
-expr_stmt|;
-name|updateShardHandler
-operator|=
-name|cc
-operator|.
-name|getUpdateShardHandler
-argument_list|()
-expr_stmt|;
+comment|// start the overseer first as following code may need it's processing
 if|if
 condition|(
 operator|!
@@ -3406,9 +3334,18 @@ operator|=
 operator|new
 name|Overseer
 argument_list|(
-name|shardHandler
+name|cc
+operator|.
+name|getShardHandlerFactory
+argument_list|()
+operator|.
+name|getShardHandler
+argument_list|()
 argument_list|,
-name|updateShardHandler
+name|cc
+operator|.
+name|getUpdateShardHandler
+argument_list|()
 argument_list|,
 name|CommonParams
 operator|.
@@ -3452,10 +3389,39 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+name|zkStateReader
+operator|.
+name|createClusterStateWatchersAndUpdate
+argument_list|()
+expr_stmt|;
+name|Stat
+name|stat
+init|=
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+name|ZkStateReader
+operator|.
+name|LIVE_NODES_ZKNODE
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
-operator|!
-name|createdWatchesAndUpdated
+name|stat
+operator|!=
+literal|null
+operator|&&
+name|stat
+operator|.
+name|getNumChildren
+argument_list|()
+operator|>
+literal|0
 condition|)
 block|{
 name|zkStateReader
@@ -3463,7 +3429,14 @@ operator|.
 name|createClusterStateWatchersAndUpdate
 argument_list|()
 expr_stmt|;
+name|publishAndWaitForDownStates
+argument_list|()
+expr_stmt|;
 block|}
+comment|// Do this last to signal we're up.
+name|createEphemeralLiveNode
+argument_list|()
+expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
